k8s/apps/trip/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trip
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip
  namespace: trip
  labels:
    app.kubernetes.io/name: trip
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: trip
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trip
    spec:
      containers:
        - name: trip
          image: ghcr.io/itskovacs/trip:1.45.1@sha256:ab6750f656a5522ae39ea5431e15d1defb7fb441b5ccad4c052bc68d7674f87b
          command: ["fastapi", "run", "/app/trip/main.py", "--host", "0.0.0.0"]
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/storage
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: trip-data
---
apiVersion: v1
kind: Service
metadata:
  name: trip
  namespace: trip
  annotations:
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
spec:
  selector:
    app.kubernetes.io/name: trip
  ports:
    - port: 80
      targetPort: 8000
      name: http
